# VersaGraph-RAG-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
src/app/chains/: memory_manager.py  prompts.py  rag_chain.py  retriever.py
src/app/chains/llm/: LLMProvider.py  LLMProviderEnums.py
src/app/database/mongo_db/: BaseDataModel.py  ChatModel.py  DataBaseEnum.py  FileModel.py  MessageModel.py  __init__.py
src/app/database/mongo_db/schema/: Chats.py  Files.py  Messages.py  __init__.py
src/app/database/qdrantdb/: QdrantdbModel.py
src/app/routes/: chat.py  data.py
src/app/routes/schema/: ProcessRequest.py
src/app/utilities/: ProcessEnum.py  __init__.py  embeder.py  loader.py  process_file.py  splitter.py
src/frontend/: gradio_app.py
src/helper/: config.py
