[project]
name = "versagraph-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0", 
    "docx2txt>=0.9",
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "notebook>=7.5.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pymupdf>=1.27.1",
]
