[project]
name = "versagraph-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "aiofiles>=24.1.0",
    "docx2txt>=0.9",
    "fastapi[standard]>=0.129.0",
    "fastembed>=0.7.4",
    "gradio>=6.6.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langserve[all]>=0.3.3",
    "notebook>=7.5.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.1",
    "qdrant-client>=1.16.2",
]
